--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,7 @@
-name: unichan
-description: A new Flutter project.
+name: UniChan
+description: A mobile application to access imageboards.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -23,25 +10,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  http: ^0.12.2
+  photo_view: ^0.9.2
+  dots_indicator: ^1.2.0
+  flutter_spinkit: ^4.1.2
+  cached_network_image: ^2.2.0+1
+  flutter_html: ^1.0.0-pre.1
+  video_player: ^0.10.11+2
+  image_gallery_saver: ^1.5.0
+  toast: ^0.1.5
+  path_provider: ^1.6.11
+  dio: ^3.0.9
+  url_launcher: ^5.5.0
+  permission_handler: ^5.0.1+1
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
