--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio: ^3.0.9
   url_launcher: ^5.5.0
   permission_handler: ^5.0.1+1
+  provider: ^4.3.1
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
