--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   url_launcher: ^5.5.0
   permission_handler: ^5.0.1+1
   provider: ^4.3.1
+  flutter_redux: ^0.6.0
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
